--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "framer-motion": "^12.9.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "sonner": "^2.0.3"
+    "sonner": "^2.0.3",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
