--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "swiper": "^11.2.8"
